--- a/index.html
+++ b/index.html
@@ -1764,11 +1764,13 @@
         
         console.log('🚀 SODmAX Pro آماده است!');
     </script>
-    <!-- بعد از اسکریپت Supabase -->
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-<script src="supabase-config.js"></script>
-<script src="supabase-service.js"></script>
+    
+    <!-- Supabase Integration -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <!-- فایل‌های Supabase شما -->
+    <script src="js/supabase.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/ui.js"></script>
 </body>
 </html>
-
-
