--- a/index.html
+++ b/index.html
@@ -1128,6 +1128,17 @@
                     خرید SOD
                 </button>
             </div>
+            <!-- در بخش wallet-section، بعد از دکمه خرید SOD -->
+<div class="user-info" style="display: flex; align-items: center; gap: 12px; margin-top: 10px;">
+    <div style="font-size: 12px; color: var(--text-secondary);">
+        <i class="fas fa-user"></i>
+        <span id="userName">کاربر</span>
+    </div>
+    <button class="btn btn-outline" id="logoutBtn" style="padding: 8px 12px; font-size: 12px;">
+        <i class="fas fa-sign-out-alt"></i>
+        خروج
+    </button>
+</div>
         </nav>
 
         <!-- بخش ماینر -->
@@ -1774,3 +1785,4 @@
     <script src="js/ui.js"></script>
 </body>
 </html>
+
