--- a/index.html
+++ b/index.html
@@ -1789,12 +1789,20 @@
     
     <!-- Supabase Integration -->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <!-- فایل‌های Supabase شما -->
-    <script src="js/supabase.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/ui.js"></script>
+    <!-- قبل از بسته شدن تگ </body> -->
+<script type="module" src="./supabase.js"></script>
+<script type="module" src="./auth.js"></script>
+<script type="module" src="./game.js"></script>
+<script type="module" src="./ui.js"></script>
+<script type="module">
+    // Start the application
+    document.addEventListener('DOMContentLoaded', () => {
+        console.log('🚀 Starting application...');
+        window.uiService = new UIService();
+    });
+</script>
 </body>
 </html>
+
 
 
