--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>SODmAX Pro | استخراج حرفه‌ای با پاداش USDT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="styles.css">
+    <!-- این بخش رو حواست باشه باید دقیقاً همین باشه -->
+</head>
     <!-- ALL STYLES INLINE -->
     <style>
         /* تمام استایل‌های شما اینجا */
@@ -1770,5 +1772,6 @@
 <script src="supabase-service.js"></script>
 </body>
 </html>
+
 
 
