--- a/index.html
+++ b/index.html
@@ -41,7 +41,47 @@
             --radius-lg: 16px;
             --radius-xl: 20px;
         }
+/* اضافه کردن انیمیشن‌ها */
+@keyframes pulseGlow {
+    0% {
+        box-shadow: 
+            inset 0 0 40px rgba(0, 102, 255, 0.2), 
+            0 10px 30px rgba(0, 0, 0, 0.5),
+            0 0 20px rgba(0, 102, 255, 0.3);
+    }
+    100% {
+        box-shadow: 
+            inset 0 0 60px rgba(0, 102, 255, 0.4), 
+            0 15px 40px rgba(0, 102, 255, 0.3),
+            0 0 40px rgba(0, 212, 170, 0.5);
+    }
+}
 
+@keyframes miningEffect {
+    0% {
+        opacity: 1;
+        transform: translate(0, 0) scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(0, -100px) scale(1.5);
+    }
+}
+
+.auto-mining {
+    animation: pulseGlow 1.5s infinite alternate !important;
+}
+
+.mining-effect {
+    position: fixed;
+    font-weight: 900;
+    font-size: 24px;
+    pointer-events: none;
+    z-index: 10000;
+    text-shadow: 0 0 10px var(--primary), 0 0 20px var(--primary);
+    animation: miningEffect 1.5s ease-out forwards;
+    user-select: none;
+}
         * {
             margin: 0;
             padding: 0;
@@ -1393,3 +1433,4 @@
     </script>
 </body>
 </html>
+
