--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,12 @@
                     <i class="fas fa-shopping-cart"></i>
                     خرید SOD
                 </button>
-            </div>
+             <button class="btn-logout" id="logoutBtn">
+            <i class="fas fa-sign-out-alt"></i>
+            خروج
+        </button>
+    </div>
+</div>
         </nav>
 
         <!-- بخش ماینر -->
@@ -1444,3 +1449,4 @@
     </script>
 </body>
 </html>
+
