--- a/index.html
+++ b/index.html
@@ -1135,24 +1135,24 @@
 
             <!-- منوی navigation -->
             <div class="nav-menu">
-                <a href="dashboard.html">
-                    <i class="fas fa-chart-line"></i>
-                    <span class="nav-text">داشبورد</span>
-                </a>
-                <a href="leaderboard.html">
-                    <i class="fas fa-trophy"></i>
-                    <span class="nav-text">لیدربرد</span>
-                </a>
-                <a href="missions.html">
-                    <i class="fas fa-tasks"></i>
-                    <span class="nav-text">مأموریت‌ها</span>
-                </a>
-                <!-- لینک مدیریت - فقط برای ادمین نمایش داده می‌شود -->
-                <a href="admin.html" id="adminLink" style="display: none; background: rgba(148,163,184,0.3);">
-                    <i class="fas fa-user-shield"></i>
-                    <span class="nav-text">مدیریت</span>
-                </a>
-            </div>
+    <a href="dashboard.html">
+        <i class="fas fa-chart-line"></i>
+        <span class="nav-text">داشبورد</span>
+    </a>
+    <a href="leaderboard.html">
+        <i class="fas fa-trophy"></i>
+        <span class="nav-text">لیدربرد</span>
+    </a>
+    <a href="missions.html">
+        <i class="fas fa-tasks"></i>
+        <span class="nav-text">مأموریت‌ها</span>
+    </a>
+    <!-- لینک ادمین - اینجا اضافه شده -->
+    <a href="admin-panel.html" id="adminLink" style="display: none;">
+        <i class="fas fa-user-shield"></i>
+        <span class="nav-text">مدیریت</span>
+    </a>
+</div>
 
             <div class="wallet-section">
                 <div class="wallet-row">
@@ -1449,4 +1449,5 @@
     </script>
 </body>
 </html>
+
 
