--- a/index.html
+++ b/index.html
@@ -1114,11 +1114,7 @@
 
                 <div style="text-align: center; margin-top: 20px; color: var(--text-secondary); font-size: 12px;">
                     با ثبت نام، <a href="#" onclick="showTerms()" style="color: var(--primary-light);">قوانین و شرایط</a> را می‌پذیرید
-                </div>
-            </form>
-        </div>
-    </div>
-<!-- در بخش register-overlay، بعد از فرم ثبت‌نام، این کد را اضافه کنید -->
+                </div><!-- در بخش register-overlay، بعد از فرم ثبت‌نام، این کد را اضافه کنید -->
 <div style="margin-top: 20px; text-align: center;">
     <h3 style="color: var(--text); margin-bottom: 15px;">👋 قبلاً ثبت‌نام کرده‌اید؟</h3>
     
@@ -1142,6 +1138,8 @@
         فراموشی رمز عبور؟ <a href="#" onclick="resetPassword()" style="color: var(--primary-light);">اینجا کلیک کنید</a>
     </div>
 </div>
+    </div>
+
     <!-- کانتینر اصلی -->
     <div class="container" id="mainContainer" style="display: none;">
         <!-- ناوبری -->
@@ -1472,6 +1470,7 @@
     </script>
 </body>
 </html>
+
 
 
 
