--- a/index.html
+++ b/index.html
@@ -1459,16 +1459,16 @@
         </div>
     </div>
 
-    <!-- JavaScript -->
-    <!-- ابتدا کتابخانه Supabase -->
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    
-    <!-- سپس سرویس‌های ما -->
-    <script src="js/supabase.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/ui.js"></script>
-    
+   <!-- JavaScript -->
+<!-- ابتدا کتابخانه Supabase -->
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+
+<!-- سپس سرویس‌های ما -->
+<script src="js/supabase.js"></script>
+<script src="js/wallet.js"></script> <!-- این خط رو اضافه کنید -->
+<script src="js/auth.js"></script>
+<script src="js/game.js"></script>
+<script src="js/ui.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             console.log('🚀 SODmAX Pro loaded successfully!');
@@ -1528,6 +1528,7 @@
     </script>
 </body>
 </html>
+
 
 
 
